--- a/tests/small.ini
+++ b/tests/small.ini
@@ -78,9 +78,9 @@ max_size=25000
 ; be defines, if they are not, the default value from the __init__ method is
 ; used. Notice the vocabulary is aquired via the language string.
 class=encoders.sentence_encoder.SentenceEncoder
-rnn_size=256
-max_input_len=20
-embedding_size=200
+rnn_size=231
+max_input_len=17
+embedding_size=203
 dropout_keep_p=0.5
 attention_type=decoding_function.Attention
 data_id=source
@@ -97,9 +97,11 @@ max_size=25000
 [decoder]
 class=decoders.decoder.Decoder
 encoders=[<encoder>]
-rnn_size=256
-embedding_size=256
+project_encoder_outputs=True
+rnn_size=211
+embedding_size=317
 use_attention=True
+maxout_size=197
 dropout_keep_p=0.5
 data_id=target
 vocabulary=<decoder_vocabulary>
