in-graph beam search

--- a/tests/small.ini
+++ b/tests/small.ini
@@ -37,14 +37,17 @@ val_dataset=<val_data>
 trainer=<trainer>
 runner=<runner>
 postprocess=None
-evaluation=[<bleuref>]
+evaluation=[<bleu1>, <bleu>]
 logging_period=20
 validation_period=60
 random_seed=1234
 
-[bleuref]
-class=evaluators.bleu_ref.BLEUReferenceImplWrapper
-wrapper=lib/mteval/wrap-mteval.pl
+[bleu]
+class=evaluators.bleu.BLEUEvaluator
+
+[bleu1]
+class=evaluators.bleu.BLEUEvaluator
+n=1
 
 [train_data]
 ; This is definition of the training data object. Notice that language are
@@ -102,6 +105,7 @@ rnn_size=211
 embedding_size=317
 use_attention=True
 maxout_size=197
+beam_size=10
 dropout_keep_p=0.5
 data_id=target
 vocabulary=<decoder_vocabulary>
